# sbt.-firmware.boxes.temperature-box

./: .config  .config_cantest  CMakeLists.txt  CODEOWNERS
App/: CMakeLists.txt
App/ADCReader/: CMakeLists.txt  main.cpp
App/ADCReader/Tasks/: ADCReader.cpp  ADCReader.hpp
App/CanReceiver/: CMakeLists.txt  main.cpp
App/CanReceiver/Tasks/: Receiver.cpp  Receiver.hpp
App/CanSender/: CMakeLists.txt  main.cpp
App/CanSender/Tasks/: Sender.cpp  Sender.hpp
App/Common/Tasks/: UARTGatekeeper.cpp
App/Firmware/: CMakeLists.txt  main.cpp
App/Firmware/Lib/: DS18B20.cpp  DS18B20.hpp  UART1W.cpp  UART1W.hpp
App/Firmware/Tasks/: CANPrint.cpp  CANPrint.hpp  ExampleTask.cpp  ExampleTask.hpp  ReadTemp.cpp  ReadTemp.hpp  TempCAN.cpp  TempCAN.hpp
App/I2C_24AA01/: CMakeLists.txt  main.cpp
App/I2C_24AA01/Tasks/: I2C_24AA01.cpp  I2C_24AA01.hpp
App/SPI_ILI9341/: CMakeLists.txt  main.cpp
App/SPI_ILI9341/Tasks/: SPI_ILI9341.cpp  SPI_ILI9341.hpp
App/Tasks/: canTest.cpp  canTest.hpp
App/UARTEcho/: main.cpp
cmake/: toolchain-arm-none-eabi.cmake
